# LearningExecutors

./: .gitignore  CMakeLists.txt  Concepts.hpp  Core.hpp  Executors.hpp  Forward.hpp  main.cpp  readme.md
Algorithms/: Algorithms.hpp  EnsureStarted.hpp  Just.hpp  JustOn.hpp  LetError.hpp  LetValue.hpp  On.hpp  PipeOperator.hpp  SyncWait.hpp  Then.hpp  Transform.hpp
Contexts/: ImmediateContext.hpp  StaticThreadPool.hpp
Core/: Core.hpp  Forward.hpp  Properties.hpp  Traits.hpp  TraitsImpl.hpp
Core/Adaptor/: AsInvocable.hpp  AsOperation.hpp  AsReceiver.hpp
Core/Adaptors/: AsDoneReceiver.hpp  AsErrorReceiver.hpp  AsValueReceiver.hpp
Core/Algorithm/: Connect.hpp  SetDone.hpp  SetError.hpp  SetValue.hpp  Start.hpp  Submit.hpp
Core/Algorithms/: Just.hpp  Then.hpp
Core/CPOs/: Connect.hpp  Execute.hpp  Properties.hpp  Schedule.hpp  SetDone.hpp  SetError.hpp  SetValue.hpp  StandardExt.hpp  Start.hpp  Submit.hpp
Core/Common/: DoneReceiver.hpp  ErrorReceiver.hpp  Promise.hpp  PropagateReceiver.hpp  ValueReceiver.hpp
Core/Concepts/: Basic.hpp  Executor.hpp  OperationState.hpp  Receiver.hpp  Scheduler.hpp  Sender.hpp  SenderTo.hpp  Std.hpp
Core/Traits/: CallableTraits.hpp  Traits.hpp  TraitsImpl.hpp
Memory/: BlockingQueue.hpp  Memory.hpp
Test/: main.cpp
